# lingua_mechanica_kinematics_server

./: CMakeLists.txt  package.xml  readme.md
scripts/: lingua_mechanica_kinematics_server.py
