<?xml version="1.0"?>
<package>
  <name>lingua_mechanica_kinematics_server</name>
  <version>0.9.1</version>
  <description>
    lingua mechanica kinematics server
  </description>
  <maintainer email="pau.carre@gmail.com">Pau Carre Cardona</maintainer>
  <license>MIT</license>

  <buildtool_depend version_gte="0.5.68">catkin</buildtool_depend>

  <build_depend>lingua_mechanica_kinematics_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>lingua_mechanica_kinematics_msgs</run_depend>

</package>